--- a/src/app/pages/header/header.component.css
+++ b/src/app/pages/header/header.component.css
@@ -94,7 +94,7 @@
         background: #8badd6;
         z-index: 99;
         top: 50px;
-        width: 50%;
+        width: 70%;
         text-decoration: none;
     }
 }
@@ -128,6 +128,33 @@ li:hover {
     }
     .nav-item {
         border-left: rgb(255, 255, 255) solid 1px;
+    }
+}
+
+.collapsedTitle {
+    display: none;
+}
+
+@media(max-width: 991px) {
+    .navbar-nav {
+        margin-left: 4px;
+        border-radius: 10px;
+        margin-top: -4px;
+    }
+    .collapsedTitle {
+        display: block;
+        position: absolute;
+        top: 117px;
+        left: 25vw;
+        right: 25vw;
+        text-align: center;
+        justify-content: center;
+        height: 30px;
+        font-size: 16px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        color: white;
+        background-color: #8badd6;
+        border-radius: 15px;
     }
 }
 
