--- a/src/app/pages/mural/mural.component.css
+++ b/src/app/pages/mural/mural.component.css
@@ -1,67 +1,99 @@
-body{margin-top:20px;}
-
+body {
+    margin-top: 20px;
+}
 
 .align-center {
     text-align: center;
 }
+
 .hash-list {
     display: block;
     padding: 0;
     margin: 0 auto;
 }
 
-@media (min-width: 768px){
-    .hash-list.cols-3 > li:nth-last-child(-n+3) {
+@media (min-width: 768px) {
+    .hash-list.cols-3>li:nth-last-child(-n+3) {
         border-bottom: none;
     }
 }
-@media (min-width: 768px){
-    .hash-list.cols-3 > li {
+
+@media (min-width: 768px) {
+    .hash-list.cols-3>li {
         width: 33.3333%;
     }
 }
-.hash-list > li {
+
+.hash-list>li {
     display: block;
     float: left;
-    border-right: 1px solid rgba(0, 0, 0, 0.2);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
-.pad-30, .pad-30-all > * {
+
+.hash-list>li .muraltransp {
+    background-color: rgba(0, 0, 0, 0.1);
+    height: 15rem;
+}
+
+.hash-list>li span {
+    overflow-y: scroll;
+    height: 3rem;
+}
+
+.pad-30,
+.pad-30-all>* {
     padding: 30px;
 }
+
 img {
     border: 0;
 }
-.mgb-20, .mgb-20-all > * {
+
+.mgb-20,
+.mgb-20-all>* {
     margin-bottom: 20px;
 }
-.wpx-100, .wpx-100-after:after {
+
+.wpx-100,
+.wpx-100-after:after {
     width: 100px;
 }
-.wpx-200, .wpx-200-after:after {
+
+.wpx-200,
+.wpx-200-after:after {
     width: 200px;
 }
-.img-round, .img-rel-round {
+
+.img-round,
+.img-rel-round {
     border-radius: 50%;
 }
-.padb-30, .padb-30-all > * {
+
+.padb-30,
+.padb-30-all>* {
     padding-bottom: 30px;
 }
 
-.mgb-40, .mgb-40-all > * {
+.mgb-40,
+.mgb-40-all>* {
     margin-bottom: 40px;
 }
+
 .align-center {
     text-align: center;
 }
+
 [class*="line-b"] {
     position: relative;
     padding-bottom: 20px;
     border-color: #E6AF2A;
 }
-.fg-text-d, .fg-hov-text-d:hover, .fg-active-text-d.active {
+
+.fg-text-d,
+.fg-hov-text-d:hover,
+.fg-active-text-d.active {
     color: #222;
 }
+
 .font-cond-b {
     font-weight: 700 !important;
 }
