Ajustes pontuais ainda em SandBox

--- a/src/app/pages/header/header.component.css
+++ b/src/app/pages/header/header.component.css
@@ -150,7 +150,7 @@ li:hover {
         text-align: center;
         justify-content: center;
         height: 30px;
-        font-size: 16px;
+        font-size: 4vw;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         color: white;
         background-color: #8badd6;
