--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,8 +3,7 @@
         <img class="imgcss" src="assets/img/casal_transp.png">
     </div>
     <div class="d-flex">
-
-        <p class="fontDefault text-center fst-italic">"Este ano de 2021 está sendo muito especial para nós, estamos muito ansiosos pela chegada do Martim. Sabemos que a pandemia ainda não irá nos permitir um contato tão próximo, porém, como todo bom brasileiro, não desistimos nunca ... Criamos este
-            site para compartilhar esses momentos com as pessoas que amamos e diminuir, mesmo que virtualmente, a distancia entre nós"</p>
+        <p class="fontDefault text-center fst-italic">"O ano de 2021 está sendo muito especial para nós, estamos muito ansiosos pela chegada do Martim. Mesmo a pandemia não permitindo um contato mais próximo, como bons brasileiros, não desistimos nunca... <br>Criamos o site para compartilhar deste
+            momento com as pessoas que amamos e diminuir, mesmo que virtualmente, a distância entre nós"</p>
     </div>
 </div>
