--- a/src/app/pages/event/event.component.css
+++ b/src/app/pages/event/event.component.css
@@ -13,7 +13,7 @@
     margin: 1% 5% 1% 5%;
     background: rgba(250, 250, 250, .3);
     font-family: Artika;
-    font-size: auto;
+    font-size: 90%;
     font-weight: normal;
     color: rgb(82, 67, 49);
 }
