--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
+    <p class="fontDefault text-center">
+        "O ano de 2021 está sendo muito especial para nós, estamos muito ansiosos pela chegada do Martim. Mesmo a pandemia não permitindo um contato mais próximo, como bons brasileiros, não desistimos nunca... <br>Criamos o site para compartilhar este
+        momento com as pessoas que amamos e diminuir, mesmo que virtualmente, a distância entre nós"
+    </p>
     <div class="d-flex">
         <img class="imgcss" src="assets/img/casal_transp.png">
-    </div>
-    <div class="d-flex">
-        <p class="fontDefault text-center fst-italic">"O ano de 2021 está sendo muito especial para nós, estamos muito ansiosos pela chegada do Martim. Mesmo a pandemia não permitindo um contato mais próximo, como bons brasileiros, não desistimos nunca... <br>Criamos o site para compartilhar este
-            momento com as pessoas que amamos e diminuir, mesmo que virtualmente, a distância entre nós"</p>
     </div>
 </div>
