--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,18 +1,31 @@
 .imgcss {
     margin: auto;
+    height: 70%;
     max-width: 90vw;
-    width: 90vw;
-    height: auto;
     border: solid 5px white;
     background: rgba(255, 255, 255, .5);
     box-shadow: 0px 1vh 2vh rgb(0 0 0 / 80%);
     margin-top: 1vh;
 }
 
+@media screen and (max-width:930px) {
+    .banner-slider .content-banner .date-week {
+        bottom: -90px;
+        right: 50%;
+        -webkit-transform: translateX(50%) scale(0.5);
+    }
+}
+
 .fontDefault {
-    margin: 2% 2% 2% 2%;
+    margin: 1% 15vw 1% 15vw;
     font-family: "OPS";
     font-size: 90%;
     font-weight: normal;
     color: rgb(82, 67, 49);
+}
+
+@media screen and (max-width:930px) {
+    .fontDefault {
+        zoom: .7;
+    }
 }
