--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,7 +1,7 @@
 .imgcss {
     margin: auto;
-    height: 70%;
     max-width: 90vw;
+    height: auto;
     border: solid 5px white;
     background: rgba(255, 255, 255, .5);
     box-shadow: 0px 1vh 2vh rgb(0 0 0 / 80%);
@@ -26,6 +26,6 @@
 
 @media screen and (max-width:930px) {
     .fontDefault {
-        zoom: .7;
+        margin: 1vh 1vw 1vh 1vw;
     }
 }
